6
Added some options and minor display updates.

5
Improved compatibility with Qt 5.
Corrected silent bug in latitude and longitude parsing.

4
Added scrollbars to be able to select only a part of the trajectory.

3
Added defines to choose between FILTEREDWINDDIR_MODE (for Patrick's boat) and VAIMOS_MODE (default).
Text is now displayed on top of other drawings.
Minor display changes.

2
Version modified for Patrick's boat.

1
Initial version.